@@ -200,13 +200,19 @@ If true, use `[BumpVersionAfterRelease]`  and `[RewriteVersions::Sanitized]` ins
 
 ## `copyfiles`
 
-An array of files generated by dzil build to copy from the built dist back to the source dist
+An array of files generated by `Dist::Zilla` build to copy from the built dist back to the source dist
 
     copyfiles = LICENSE
     ; Warning: These two are presently bad ideas
     ; and will ultimately give version mismatches
     copyfiles = Makefile.PL
     copyfiles = META.json
+
+## `srcreadme`
+
+    srcreadme = pod  ; # generate README.pod on the source side
+    srcreadme = mkdn ; # generate README.mkdn on the source side
+    srcreadme = none ; # don't generate README on the source side
 
 # AUTHOR
 
