@@ -357,7 +357,7 @@ has 'bumpversions' => (
 
 =attr C<copyfiles>
 
-An array of files generated by dzil build to copy from the built dist back to the source dist
+An array of files generated by C<Dist::Zilla> build to copy from the built dist back to the source dist
 
   copyfiles = LICENSE
   ; Warning: These two are presently bad ideas
@@ -372,6 +372,21 @@ has copyfiles => (
   isa     => 'ArrayRef[ Str ]',
   lazy    => 1,
   builder => sub { undef },
+);
+
+=attr C<srcreadme>
+
+  srcreadme = pod  ; # generate README.pod on the source side
+  srcreadme = mkdn ; # generate README.mkdn on the source side
+  srcreadme = none ; # don't generate README on the source side
+
+=cut
+
+has srcreadme => (
+  is => ro =>,
+  isa => enum( [ 'pod', 'mkdn', 'none' ] ),
+  lazy    => 1,
+  builder => sub { return 'mkdn'; },
 );
 
 =method C<add_plugin>
@@ -456,15 +471,16 @@ sub _configure_basic_metadata {
 }
 
 sub _configure_basic_files {
-  my ($self) = @_;
-  my $GGD = { include_dotfiles => 1 };
+  my ($self)         = @_;
+  my (@ignore_files) = qw( README README.mkdn README.pod );
 
-  if ( @{ $self->copyfiles } ) {
-    $GGD->{exclude_filename} = [ @{ $self->copyfiles } ];
-  }
-
-  $self->add_plugin( 'Git::GatherDir' => $GGD );
-  $self->add_plugin( 'License'        => {} );
+  $self->add_plugin(
+    'Git::GatherDir' => {
+      include_dotfiles => 1,
+      exclude_filename => [@ignore_files],
+    },
+  );
+  $self->add_plugin( 'License' => {} );
 
   $self->add_plugin( 'MetaJSON' => {} );
   $self->add_plugin( 'MetaYAML' => {} );
@@ -595,6 +611,29 @@ sub _configure_toolkit_prereqs {
   return;
 }
 
+sub _configure_reademes {
+  my ($self) = @_;
+
+  $self->add_plugin( 'ReadmeFromPod' => {} );
+
+  my $type = $self->srcreadme;
+
+  return if 'none' eq $type;
+
+  my $map = {};
+  $map->{mkdn} = { type => 'markdown', filename => 'README.mkdn' };
+  $map->{pod}  = { type => 'pod',      filename => 'README.pod' };
+
+  if ( not exists $map->{$type} ) {
+    require Carp;
+    return Carp::confess("No known readme type $type");
+  }
+
+  $self->add_plugin( 'ReadmeAnyFromPod' => { location => 'root', %{ $map->{$type} } }, );
+
+  return;
+}
+
 sub configure {
   my ($self) = @_;
 
@@ -643,14 +682,8 @@ sub configure {
 
   $self->_configure_toolkit;
 
-  $self->add_plugin( 'ReadmeFromPod' => {} );
-  $self->add_plugin(
-    'ReadmeAnyFromPod' => {
-      type     => 'markdown',
-      filename => 'README.mkdn',
-      location => 'root',
-    },
-  );
+  $self->_configure_readmes;
+
   $self->add_plugin( 'Test::CPAN::Changes' => {} );
   $self->add_plugin( 'RunExtraTests'       => { default_jobs => 10 } );
   $self->add_plugin( 'TestRelease'         => {} );
