@@ -3,6 +3,7 @@
 {{$NEXT}}
  [00 Major]
  - add copyfiles attribute to easily support copying files from build.
+ - add srcreadme attribute to control how README is generated in the build tree.
 
 2.015000 2014-06-03T05:21:36Z
  [00 Major]
